Add the Svelte VS Code extension

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,4 @@
+
 tasks:
   - init: npm install
     command: |
@@ -8,3 +9,7 @@ ports:
   - port: 3000
     onOpen: open-browser
 
+
+vscode:
+  extensions:
+    - svelte.svelte-vscode
